--- a/test/Cms.Website/Cms.Website.csproj
+++ b/test/Cms.Website/Cms.Website.csproj
@@ -1,12 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Cms.Core\Cms.Core.csproj" />
-    <ProjectReference Include="..\..\src\Cms.Razor\Cms.Razor.csproj" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Cms.Pipeline\Cms.Pipeline.csproj" />
   </ItemGroup>
 
 </Project>
